A patch from Krzysztof Podejma "Menus styled with the menu-container-style "button-bar tab-bar" are not visible in IE 7" (https://issues.apache.org/jira/browse/OFBIZ-1748) - OFBIZ-1748
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@647632 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1537,8 +1537,8 @@ padding: 0.1em;
 /* tab-bar decorator intended to be used at
 the top of the main content area */
 .tab-bar {
-margin-left: -1em;
-margin-top: -1em;
+margin-left: 0em;
+margin-top: 0em;
 padding: 0;
 }
 
